--- a/config.gradle
+++ b/config.gradle
@@ -17,14 +17,14 @@ project.ext {
 
     //App dependencies
     supportLibraryVersion = '23.4.0'
-    GooglePlayServicesClientLibraryVersion = '7.0.0'
+    GooglePlayServicesClientLibraryVersion = '9.0.0'
     guavaVersion = '18.0'
     daggerVersion = "2.2"
     retrofitVersion = "2.0.2"
 //    retrofitVersion = "2.0.0-beta4"
     rxBindingVersion = '0.4.0'
-    leakCanaryVersion = "1.3.1"
-    blockCanaryVersion = '1.1.4'
+    leakCanaryVersion = "1.4-beta2"
+    blockCanaryVersion = '1.2.1'
     mockitoVersion = '1.10.19'
     powerMockito = '1.6.2'
     hamcrestVersion = '1.3'
@@ -73,13 +73,15 @@ project.ext {
     libRealm = "io.realm:realm-android:0.87.5"
 
     debugDependencies = [
+
             leakCanary: "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}",
-            blockcanary: "com.github.moduth:blockcanary-ui:${blockCanaryVersion}",
+            //BlockCanary是一个Android平台的一个非侵入式的性能监控组件,从leakCanary(上面)改进而来
+            blockCanary: "com.github.moduth:blockcanary-android:${blockCanaryVersion}",
     ]
 
     releaseDependencies = [
             leakCanary: "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}",
-            blockcanary: "com.github.moduth:blockcanary-no-op:${blockCanaryVersion}",
+            blockCanary: "com.github.moduth:blockcanary-no-op:${blockCanaryVersion}",
     ]
 
 
