--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "${version_name}"
         minSdkVersion "${minSdkVersion}"
         targetSdkVersion "${targetSdkVersion}"
+        multiDexEnabled true
     }
     //与其main程序统一
     buildTypes {
@@ -44,4 +45,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:2.0.0-alpha1'
     compile "com.google.android.gms:play-services:${GooglePlayServicesClientLibraryVersion}"
+    compile rootProject.ext.libMultidex
 }
