添加simple_mobile作为开发示例

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':base_mobile', ':base_wear', ':base_tv', ':base_glass', ':app_core'
+include ':base_mobile', ':base_wear', ':base_tv', ':base_glass', ':app_core', ':sample_mobile'
