--- a/config.gradle
+++ b/config.gradle
@@ -6,7 +6,7 @@ project.ext {
     minSdkVersion = 14
     compileSdkVersion = 23
     targetSdkVersion = 23
-    buildToolsVersion = '24.0.0rc4'
+    buildToolsVersion = '24.0.0'
 
     abortOnLintError = false
     checkLintRelease = false
