--- a/sample_mobile/build.gradle
+++ b/sample_mobile/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt' // Butterknife和dagger等包有依赖
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -13,8 +14,8 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
@@ -30,5 +31,7 @@ dependencies {
 //    debugCompile rootProject.ext.debugDependencies.leakCanary
 //    releaseCompile rootProject.ext.releaseDependencies.leakCanary
 
+    apt libButterknifeCompiler
+    compile libButterknife
 
 }
