--- a/sample_mobile/src/main/AndroidManifest.xml
+++ b/sample_mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.code.wing.sample_mobile" >
+    package="com.code.wing.sample_mobile" >
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".App"
+        android:name="com.code.wing.sample_mobile.App"
         >
-        <activity android:name=".MainActivity" android:label="Main">
+        <activity android:name="com.code.wing.sample_mobile.MainActivity" android:label="Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Test4SingleFragmentActivity" android:label="XXXX"/>
-        <activity android:name=".Test4MultFragmentActivity" android:label="么么哒"/>
+        <activity android:name="com.code.wing.sample_mobile.Test4SingleFragmentActivity" android:label="XXXX"/>
+        <activity android:name="com.code.wing.sample_mobile.Test4MultFragmentActivity" android:label="么么哒"/>
     </application>
 
 </manifest>
